--- a/src/components/timeline/tlstyles.css
+++ b/src/components/timeline/tlstyles.css
@@ -63,37 +63,21 @@
 /* ACTUAL TIMELINE */
 .timeline-container {
 	width: 100%;
+	padding: 4em 0;
 
 	--distance-from-line: 2.5em;
 	--timeline-line-thickness: 5px;
 }
 
-.timeline-container {
-	padding: 4em 0;
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-	gap: var(--distance-from-line);
-}
-.timeline-group {
-	display: flex;
-	gap: 4rem;
-	justify-content: space-between;
-	height: 2em;
-	position: relative;
-}
-.timeline-group.top {
-	transform: translateX(-3rem);
-}
-.timeline-group.bottom {
-	transform: translateX(3rem);
-}
 .timeline-line {
+	margin: 4em 0;
 	position: relative;
-	width: 75vw;
 	height: 5px;
+	z-index: 1;
 	background-color: #eac786;
 	box-shadow: 0px 3px 10px 12px #0002;
+	overflow-y: visible;
+	padding: 0 2rem;
 }
 .timeline-line::before {
 	content: '';
@@ -118,6 +102,19 @@
 	background-color: #eac786;
 }
 
+.timeline-group {
+	position: relative;
+	display: flex;
+	gap: 4rem;
+	justify-content: center;
+}
+.timeline-group.top {
+	top: calc(-2*var(--distance-from-line));
+}
+.timeline-group.bottom {
+	bottom: calc(2*var(--timeline-line-thickness));
+}
+
 
 .tl-object-wrapper {
 	display: flex;
@@ -127,7 +124,7 @@
 	color: white;
 	padding: 0.5em;
 	position: relative;
-
+	z-index: 100;
 	/* so that theyre all vertically centered with each other. x-pos set dynamically */
 	/* top: 50%;
 	transform: translateY(-50%); */
@@ -178,24 +175,24 @@
 .tl-object-wrapper.is_top::after {
 	content: '';
 	position: absolute;
-	bottom: calc(100% - 2*var(--distance-from-line) - var(--timeline-line-thickness)/2);
+	bottom: calc(0px - var(--distance-from-line) - var(--timeline-line-thickness)/2);
 	left: 50%;
 	transform: translateX(-50%);
 	width: 1em;
 	height: 1em;
-	z-index: 10;
+	z-index: 200;
 	border-radius: 100%;
 	background-color: #eac786;
 }
 .tl-object-wrapper.is_bottom::after {
 	content: '';
 	position: absolute;
-	top: calc(100% - 2*var(--distance-from-line) - var(--timeline-line-thickness)/2);
+	top: calc(0px - var(--distance-from-line) - var(--timeline-line-thickness)/2);
 	left: 50%;
 	transform: translateX(-50%);
 	width: 1em;
 	height: 1em;
-	z-index: 10;
+	z-index: 200;
 	border-radius: 100%;
 	background-color: #eac786;
 }
