--- a/src/components/timeline/tlstyles.css
+++ b/src/components/timeline/tlstyles.css
@@ -200,22 +200,22 @@
 @keyframes bgFlash {
 	0% {
 		background-color: #ffc457;
-		box-shadow: 0px 0px 40px 0 #ffc457;
+		box-shadow: 0px 0px 40px 10px #ffc457;
 	}
-	80% {
+	60% {
 		background-color: #ffc457;
-		box-shadow: 0px 0px 40px 0 #ffc457;
+		box-shadow: 0px 0px 40px 10px #ffc457;
 	}
 	100% {
 		background-color: white;
-		box-shadow: 0px 0px 10px 0 transparent;
+		box-shadow: 0px 0px 40px 10px transparent;
 	}
 }
 @keyframes textFlash {
 	0% {
 		color: #ffc457;
 	}
-	80% {
+	60% {
 		color: #ffc457;
 	}
 	100% {
@@ -224,9 +224,9 @@
 }
 
 .tl-object-wrapper.flash .tl-object-number {
-	animation: bgFlash 1.5s ease-out;
+	animation: bgFlash 1s ease-out;
 }
 
 .tl-object-wrapper.flash .tl-object-label {
-	animation: textFlash 1.5s ease-out;
+	animation: textFlash 1s ease-out;
 }
