--- a/src/App.css
+++ b/src/App.css
@@ -45,14 +45,23 @@
   --color-sidebar-accent-foreground: var(--sidebar-accent-foreground);
   --color-sidebar-border: var(--sidebar-border);
   --color-sidebar-ring: var(--sidebar-ring);
-  --color-theme-gold: #F1C57C;
+  --color-gold-dark: #B69867;
+  --color-gold: #F1C57C;
+  --color-gold-light: #EED4AA;
 }
 
-.color-gold {
-  color: var(--color-theme-gold);
+.color-gold-dark {
+  color: var(--color-gold-dark);
 }
+.color-gold-light {
+  color: var(--color-gold-light);
+}
+.color-gold {
+  color: var(--color-gold);
+}
+
 .bg-gold {
-  background-color: var(--color-theme-gold);
+  background-color: var(--color-gold);
 }
 
 :root {
@@ -140,14 +149,14 @@ body {
 .pillar1 {
   position: absolute;
   height: calc(100% - var(--about-floor-height));
-  left: calc(100vw); /* pillar SVG is 352 wide */ 
+  left: calc(100vw);
   bottom: var(--about-floor-height);
   transform: translateX(-50%);
 }
 .pillar2 {
   position: absolute;
   height: calc(100% - var(--about-floor-height));
-  left: calc(200vw); /* pillar SVG is 352px wide */
+  left: calc(200vw);
   bottom: var(--about-floor-height);
   transform: translateX(-50%);
 }
