--- a/src/components/timeline/thinscreen/tlstyles_thin.css
+++ b/src/components/timeline/thinscreen/tlstyles_thin.css
@@ -18,7 +18,7 @@
 	border-radius: 1000px;
 	padding: 0.3rem 1.25rem;
 	gap: 1rem;
-	background-color: var(--color-theme-gold);
+	background-color: var(--color-gold);
 	display: flex;
 	align-items: center;
 	justify-content: space-between;
