--- a/src/App.css
+++ b/src/App.css
@@ -45,9 +45,13 @@
   --color-sidebar-accent-foreground: var(--sidebar-accent-foreground);
   --color-sidebar-border: var(--sidebar-border);
   --color-sidebar-ring: var(--sidebar-ring);
+  
   --color-gold-dark: #B69867;
   --color-gold: #F1C57C;
   --color-gold-light: #EED4AA;
+
+  /** used for shadows/"inverted" color to the gold */
+  --color-brown: #771500;
 }
 
 .color-gold-dark {
@@ -167,4 +171,63 @@ body {
   height: 4vh;
   width: 100vw;
   z-index: 10;
+}
+
+.scroll-arrow-container {
+	position: fixed;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	top: 80%;
+	left: 50%;
+	transform: translateX(-50%);
+	overflow: visible;
+	z-index: 200;
+  cursor: pointer;
+}
+
+@keyframes rotateInf {
+	0% {
+		transform: rotate(0deg);
+	}
+	100% {
+		transform: rotate(360deg);
+	}
+}
+@keyframes up-down-wobble {
+  0% {
+    transform: translateY(3px);
+  }
+  50% {
+    transform: translateY(-3px);
+  }
+  100% {
+    transform: translateY(3px);
+  }
+}
+.circular-text {
+	height: 12vh;
+	z-index: 4;
+	animation: rotateInf 10s linear infinite;
+}
+.arrow-icon-container {
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	background-color: #0008;
+  outline: 1px solid var(--color-gold-light);
+	font-size: 3vh;
+	aspect-ratio: 1;
+	border-radius: 1000px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	padding: 5vh;
+	z-index: 3;
+  cursor: pointer;
+}
+.arrow-icon {
+	color: var(--color-gold-light);
+  animation: up-down-wobble 2s ease-in-out infinite;
 }
