allow left/right buttons on timeline->eventcard to nav between days, refactor to 0-index event/day indices

--- a/src/components/timeline/thinscreen/tlstyles_thin.css
+++ b/src/components/timeline/thinscreen/tlstyles_thin.css
@@ -56,6 +56,10 @@
 	cursor: pointer;
 	transition: transform 0.1s ease-out;
 }
+.eventcard-rounded-button-small:disabled {
+	opacity: 0.5;
+	cursor: default;
+}
 
 .day-selector-thin {
 	display: flex;
