--- a/src/components/timeline/tlstyles.css
+++ b/src/components/timeline/tlstyles.css
@@ -17,7 +17,7 @@
 	color: black;
 	padding: 0 1em;
 	transition: background-color 0.1s;
-	font-size: 1.5rem;
+	font-size: 1.2rem;
 	font-weight: 700;
 }
 .day-selector-option:hover {
@@ -29,7 +29,7 @@
 }
 
 .day-date-display {
-	font-size: 2rem;
+	font-size: 1.6rem;
 	font-weight: 700;
 	color: #eac786;
 	margin-bottom: 1rem;
@@ -46,7 +46,7 @@
 	align-items: center;
 	justify-content: center;
 	gap: 0.3em;
-	font-size: min(2.5rem, 8vw);
+	font-size: min(2rem, 6vw);
 	font-weight: 700;
 	padding: 0.2em;
 	background-color: #B5C5C3;
@@ -54,7 +54,7 @@
 }
 .eventcard-desc {
 	padding: 1em 2em;
-	font-size: 1rem;
+	font-size: 0.8rem;
 	text-align: center;
 }
 .eventcard-icon {
@@ -79,15 +79,15 @@
 
 /* ACTUAL TIMELINE */
 .timeline-container {
-	width: 100%;
+	min-width: 80vw;
 	padding: 4em 0;
 
-	--distance-from-line: 2.5em;
+	--distance-from-line: 1.5em;
 	--timeline-line-thickness: 5px;
 }
 
 .timeline-line {
-	margin: 4em 0;
+	margin: 2em 0;
 	position: relative;
 	height: 5px;
 	z-index: 1;
@@ -126,10 +126,10 @@
 	justify-content: center;
 }
 .timeline-group.top {
-	top: calc(-2*var(--distance-from-line));
+	top: calc(-3.4*var(--distance-from-line));
 }
 .timeline-group.bottom {
-	bottom: calc(2*var(--timeline-line-thickness));
+	bottom: calc(1.8*var(--distance-from-line));
 }
 
 
@@ -143,7 +143,6 @@
 	position: relative;
 	z-index: 100;
 	cursor: pointer;
-	text-transform: uppercase;
 }
 .tl-object-wrapper:hover .tl-object-label {
 	color: #ffdd9f;
@@ -156,8 +155,8 @@
 	align-items: center;
 	justify-content: center;
 	border-radius: 1000px;
-	width: 2em;
-	height: 2em;
+	width: 1.6em;
+	height: 1.6em;
 	background-color: white;
 	color: black;
 	font-size: 0.75rem;
@@ -168,9 +167,21 @@
 	font-size: 1.25rem;
 	color: white;
 }
+.tl-object-time {
+	font-size: 0.8rem;
+}
 .tl-object-icon {
-	width: 2em;
-	height: 2em;
+	width: 1.2em;
+	height: 1.2em;
+}
+
+.tl-object-content {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+}
+.tl-object-content.is_bottom {
+	flex-direction: column-reverse;
 }
 
 /* add vertical line connecting to timeline below the object */
