--- a/src/components/hero/style_mobile.css
+++ b/src/components/hero/style_mobile.css
@@ -39,3 +39,11 @@
 .interest-form-button:hover {
 	filter: brightness(110%);
 }
+
+.thanks {
+	background-color: #0008;
+	border-radius: 0.4rem;
+	padding: 0.2rem 0.6rem;
+	width: fit-content;
+	margin: 0 auto;
+}
